scrum-poker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monster-scrum-poker-ingress
  namespace: monster-scrum-poker
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","kubernetes.io/tls-acme":"true","nginx.ingress.kubernetes.io/proxy-body-size":"0","nginx.ingress.kubernetes.io/proxy-read-timeout":"600","nginx.ingress.kubernetes.io/proxy-send-timeout":"600"},"name":"monster-scrum-poker-ingress","namespace":"monster-scrum-poker"},"spec":{"rules":[{"host":"*
      test-pay.monsternotebook.com","http":{"paths":[{"backend":{"service":{"name":"monster-scrum-poker","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
  selfLink: /apis/networking.k8s.io/v1/namespaces/monster-scrum-poker/ingresses/monster-scrum-poker-ingress
status:
  loadBalancer:
    ingress:
      - ip: 10.203.240.4
spec:
  rules:
    - host: agile.monsternotebook.com
      http:
        paths:
          - path: /scrum(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: monster-scrum-poker 
                port:
                  number: 80
